combine two arrays in RangeException.cpp into one https://bugs.webkit.org/show_bug.cgi?id=83450

Patch by Lu Guanqun <guanqun.lu@intel.com> on 2012-04-09
Reviewed by Kentaro Hara.

No new tests required.

* dom/RangeException.cpp:
(RangeExceptionNameDescription):
(WebCore):
(WebCore::RangeException::initializeDescription):

Canonical link: https://commits.webkit.org/100995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113685 268f45cc-cd09-0410-ab3c-d52691b4dbfc